Changes for Gapp

{{$NEXT}}


0.48
- fixed page_num bug with Assistant
- fixed warning about widget not having AssistantPage trait applied


0.47.7    2012-10-02 11:30:19
- fixing version issues

0.47.6    2012-09-28 17:39:25
- merged Gapp::Gtk2 widgets into Gapp
- new versioning system

0.47.3    2012-09-28 13:15:42
- now using Dist::Zilla

0.47.1 Sep 26 2012
- updating pod

0.47 Sep 25 2012
- updated test suite


0.46.4 Sep 7 2012
- Changed when ListStore sets the args attribute during construction to support
subclassing
- Added trigger to model attribute of TreeStore to update the gtk_widget if it
has been constructed

0.46.3 Sep 6 2012
- added border_width resize_mode property delegations to Container
- added headers_visible headers_clickable property delegations to TreeView

0.46 Sep 5 2012
- calling "add" on an container whose gobject has already been created now packs the
widget into the child
- show_all called on widgets before being added to notebook to ensure that they are
displayed
- removed "form" attribute from FormElement role
- added "form" method to FormElement role which returns the first widget in the
ancestry with the Form trait applied
- added trigger to "page_name" attribute of the NotebookPage trait which updates
the label of the page in the notebook when changed
- added HPaned, VPaned, Notebook attribute traits
- added action_widget attribute to notebook
- added image attribute to ImageButton
- BUG FIX: Buttons with a CodeRef as an action were not passing user args correctly


0.45.1 Aug 29 2012
- fixed bug painting ImageMenuItem widgets

0.45 Aug 29 2012
- created tag-editor example
- added mnemonic/accelerator attributes to Action objects
- added support for default widget in window
- added get_selected method to Gapp::TreeView
- added data_column
- added "name" attribute Gapp::Widget
- added "find" method to Gapp::Container
- add "toplvel" method to Gapp::Widget
- BUGFIX: when subclassing a container widget, and overriding the 'default'