@@ -21,9 +21,12 @@ has 'forward_page_func' => (
 
 sub current_page {
     my ( $self ) = @_;
+    
+    my @pages = $self->children;
+    
     my $num = $self->gobject->get_current_page;
     
-    for my $page ( $self->children ) {
+    for my $page ( @pages ) {
         return $page if $page->page_num == $num;
     }
 }
